--- a/doc/milestone2.ipynb
+++ b/doc/milestone2.ipynb
@@ -103,11 +103,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image.png](img/winrate.png)"
+    "![](img/winrate.png)"
    ]
   },
   {
@@ -118,11 +117,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image.png](img/playerrating.jpg)"
+    "![](img/playerrating.jpg)"
    ]
   },
   {
@@ -151,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
