--- a/models/baseline_model.ipynb
+++ b/models/baseline_model.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 796,
+   "execution_count": 816,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 797,
+   "execution_count": 817,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 798,
+   "execution_count": 818,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 798,
+     "execution_count": 818,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,16 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 799,
+   "execution_count": 819,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.43798118049615054"
+       "0.4406651549508692"
       ]
      },
-     "execution_count": 799,
+     "execution_count": 819,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 800,
+   "execution_count": 820,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "0.421875"
       ]
      },
-     "execution_count": 800,
+     "execution_count": 820,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 801,
+   "execution_count": 821,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,11 +151,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 802,
+   "execution_count": 882,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(2019)\n",
+    "np.random.seed(1)\n",
     "X_train, X_validation = train_test_split(train, test_size = 0.2)\n",
     "y_train = X_train['home_win'].ravel()\n",
     "X_train = X_train.drop(['home_win'], axis = 1)\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 803,
+   "execution_count": 883,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,15 +182,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 804,
+   "execution_count": 884,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression Train Score: 0.5080213903743316\n",
-      "Logistic Regression Validation Score: 0.5470085470085471\n"
+      "Logistic Regression Train Score: 0.5122873345935728\n",
+      "Logistic Regression Validation Score: 0.5320754716981132\n"
      ]
     }
    ],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 805,
+   "execution_count": 885,
    "metadata": {},
    "outputs": [
     {
@@ -248,24 +248,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>42.075229</td>\n",
-       "      <td>38.666000</td>\n",
-       "      <td>36.985924</td>\n",
-       "      <td>31.903847</td>\n",
+       "      <td>42.557163</td>\n",
+       "      <td>38.549357</td>\n",
+       "      <td>37.936027</td>\n",
+       "      <td>31.537804</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>47.118575</td>\n",
-       "      <td>39.408987</td>\n",
-       "      <td>38.440095</td>\n",
-       "      <td>34.807975</td>\n",
+       "      <td>48.936282</td>\n",
+       "      <td>40.405204</td>\n",
+       "      <td>40.252079</td>\n",
+       "      <td>35.024385</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>44.755154</td>\n",
-       "      <td>43.960619</td>\n",
-       "      <td>38.565511</td>\n",
-       "      <td>36.155706</td>\n",
+       "      <td>44.322274</td>\n",
+       "      <td>43.722156</td>\n",
+       "      <td>38.042605</td>\n",
+       "      <td>34.816576</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -274,12 +274,12 @@
       "text/plain": [
        "          attack_diff  defence_diff  midfield_diff  overall_diff\n",
        "home_win                                                        \n",
-       "0           42.075229     38.666000      36.985924     31.903847\n",
-       "1           47.118575     39.408987      38.440095     34.807975\n",
-       "2           44.755154     43.960619      38.565511     36.155706"
+       "0           42.557163     38.549357      37.936027     31.537804\n",
+       "1           48.936282     40.405204      40.252079     35.024385\n",
+       "2           44.322274     43.722156      38.042605     34.816576"
       ]
      },
-     "execution_count": 805,
+     "execution_count": 885,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 806,
+   "execution_count": 886,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,15 +306,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 807,
+   "execution_count": 887,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LDA Train Score: 0.5005347593582887\n",
-      "LDA Validation Score: 0.5299145299145299\n"
+      "LDA Train Score: 0.5113421550094518\n",
+      "LDA Validation Score: 0.5547169811320755\n"
      ]
     }
    ],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 808,
+   "execution_count": 888,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,15 +341,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 809,
+   "execution_count": 889,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QDA Train Score: 0.5080213903743316\n",
-      "QDA Validation Score: 0.5341880341880342\n"
+      "QDA Train Score: 0.5\n",
+      "QDA Validation Score: 0.5358490566037736\n"
      ]
     }
    ],
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 810,
+   "execution_count": 890,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,15 +376,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 811,
+   "execution_count": 891,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest Train Score: 0.5422459893048128\n",
-      "Random Forest Validation Score 0.5170940170940171\n"
+      "Random Forest Train Score: 0.553875236294896\n",
+      "Random Forest Validation Score 0.5207547169811321\n"
      ]
     }
    ],
@@ -402,14 +402,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 812,
+   "execution_count": 892,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression Test Score: 0.59375\n"
+      "Logistic Regression Test Score: 0.625\n"
      ]
     }
    ],
@@ -420,14 +420,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 813,
+   "execution_count": 893,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LDA Test Score: 0.59375\n"
+      "LDA Test Score: 0.609375\n"
      ]
     }
    ],
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 814,
+   "execution_count": 894,
    "metadata": {},
    "outputs": [
     {
@@ -456,14 +456,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 815,
+   "execution_count": 895,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest Test Score: 0.640625\n"
+      "Random Forest Test Score: 0.578125\n"
      ]
     }
    ],
