--- a/models/baseline_model.ipynb
+++ b/models/baseline_model.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 816,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 817,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 818,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 818,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,16 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 819,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4406651549508692"
+       "0.43806009488666314"
       ]
      },
-     "execution_count": 819,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 820,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "0.421875"
       ]
      },
-     "execution_count": 820,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,26 +136,26 @@
    "source": [
     "Still decent. Any model we build should be better than this test accuracy of just guessing.\n",
     "\n",
-    "Our baseline model will be pretty simple. We will utilize the differences in FIFA rankings, offense ratings, defense ratings, midfield ratings, and overall ratings. We will make a train and validation set out of the original train set. "
+    "Our baseline model will be pretty simple. We will utilize the differences in FIFA rankings, offense ratings, defense ratings, midfield ratings, overall ratings, and whether the home team is actually playing at home. We will make a train and validation set out of the original train set. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 821,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = train[['home_win', 'attack_diff', 'defence_diff', 'midfield_diff', 'overall_diff']]\n",
-    "test = test[['home_win', 'attack_diff', 'defence_diff', 'midfield_diff', 'overall_diff', 'Group']]"
+    "train = train[['home_win', 'rank_diff', 'attack_diff', 'defence_diff', 'midfield_diff', 'overall_diff']]\n",
+    "test = test[['home_win', 'rank_diff', 'attack_diff', 'defence_diff', 'midfield_diff', 'overall_diff', 'Group']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 882,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(1)\n",
+    "np.random.seed(2018)\n",
     "X_train, X_validation = train_test_split(train, test_size = 0.2)\n",
     "y_train = X_train['home_win'].ravel()\n",
     "X_train = X_train.drop(['home_win'], axis = 1)\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 883,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,15 +182,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 884,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression Train Score: 0.5122873345935728\n",
-      "Logistic Regression Validation Score: 0.5320754716981132\n"
+      "Logistic Regression Train Score: 0.5128543177323666\n",
+      "Logistic Regression Validation Score: 0.5421052631578948\n"
      ]
     }
    ],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 885,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -232,6 +232,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>rank_diff</th>\n",
        "      <th>attack_diff</th>\n",
        "      <th>defence_diff</th>\n",
        "      <th>midfield_diff</th>\n",
@@ -243,43 +244,47 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>-1</th>\n",
+       "      <td>916.793268</td>\n",
+       "      <td>40.858572</td>\n",
+       "      <td>37.554931</td>\n",
+       "      <td>38.133908</td>\n",
+       "      <td>31.393396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>42.557163</td>\n",
-       "      <td>38.549357</td>\n",
-       "      <td>37.936027</td>\n",
-       "      <td>31.537804</td>\n",
+       "      <td>960.540851</td>\n",
+       "      <td>47.654088</td>\n",
+       "      <td>43.559341</td>\n",
+       "      <td>41.798216</td>\n",
+       "      <td>36.158215</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>48.936282</td>\n",
-       "      <td>40.405204</td>\n",
-       "      <td>40.252079</td>\n",
-       "      <td>35.024385</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>44.322274</td>\n",
-       "      <td>43.722156</td>\n",
-       "      <td>38.042605</td>\n",
-       "      <td>34.816576</td>\n",
+       "      <td>936.866455</td>\n",
+       "      <td>49.295727</td>\n",
+       "      <td>43.509512</td>\n",
+       "      <td>42.634416</td>\n",
+       "      <td>37.105145</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          attack_diff  defence_diff  midfield_diff  overall_diff\n",
-       "home_win                                                        \n",
-       "0           42.557163     38.549357      37.936027     31.537804\n",
-       "1           48.936282     40.405204      40.252079     35.024385\n",
-       "2           44.322274     43.722156      38.042605     34.816576"
+       "           rank_diff  attack_diff  defence_diff  midfield_diff  overall_diff\n",
+       "home_win                                                                    \n",
+       "-1        916.793268    40.858572     37.554931      38.133908     31.393396\n",
+       " 0        960.540851    47.654088     43.559341      41.798216     36.158215\n",
+       " 1        936.866455    49.295727     43.509512      42.634416     37.105145"
       ]
      },
-     "execution_count": 885,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,12 +297,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Surprisingly, they are actually quite similar! "
+    "Surprisingly, besides `rank_diff`, they are actually quite similar! "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 886,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,15 +311,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 887,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LDA Train Score: 0.5113421550094518\n",
-      "LDA Validation Score: 0.5547169811320755\n"
+      "LDA Train Score: 0.5121951219512195\n",
+      "LDA Validation Score: 0.5394736842105263\n"
      ]
     }
    ],
@@ -332,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 888,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,15 +346,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 889,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QDA Train Score: 0.5\n",
-      "QDA Validation Score: 0.5358490566037736\n"
+      "QDA Train Score: 0.5194462755438365\n",
+      "QDA Validation Score: 0.5342105263157895\n"
      ]
     }
    ],
@@ -367,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 890,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,15 +381,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 891,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest Train Score: 0.553875236294896\n",
-      "Random Forest Validation Score 0.5207547169811321\n"
+      "Random Forest Train Score: 0.5491100856954515\n",
+      "Random Forest Validation Score 0.5368421052631579\n"
      ]
     }
    ],
@@ -402,14 +407,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 892,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression Test Score: 0.625\n"
+      "Logistic Regression Test Score: 0.609375\n"
      ]
     }
    ],
@@ -420,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 893,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -438,14 +443,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 894,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QDA Test Score: 0.609375\n"
+      "QDA Test Score: 0.640625\n"
      ]
     }
    ],
@@ -456,14 +461,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 895,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest Test Score: 0.578125\n"
+      "Random Forest Test Score: 0.65625\n"
      ]
     }
    ],
@@ -476,15 +481,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Impressive! We now have an idea of what our more advanced model should hope to achieve. "
+    "Impressive! We now have an idea of what our more advanced model should hope to achieve. \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
